# ClearLane

./: Dockerfile  FILE_INDEX.md  Makefile  README.md  app.py  config.yaml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
artifacts/: data_summary.json  demo_patrol_plan.csv  feature_importance.csv  metrics.json  metrics_before_retrain.json  police_station_summary.csv  run_manifest.json  zone_reference.csv
data/raw/: README.md
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  LIMITATIONS.md  METHODOLOGY.md  RESULTS.md  UI_DESIGN.md
models/: hotspot_model.joblib  impact_model.joblib  model_metadata.json  model_metadata_before_retrain.json
scripts/: smoke_app.py
src/clearlane/: __init__.py  cli.py  config.py  evaluation.py  features.py  grid.py  impact.py  modeling.py  optimizer.py  pipeline.py  preprocessing.py
tests/: test_features.py  test_grid.py  test_impact.py  test_modeling.py  test_optimizer.py
